config/kubeapps/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeapps-ingress
  namespace: kubeapps
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: ClusterIssuer
spec:
  tls:
  - hosts:
    - kubeapps.rdp.dev
    secretName: ingress-secrets
  rules:
  - host: kubeapps.rdp.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: kubeapps
          servicePort: 8080
